request-sink (0.0.4) UNRELEASED; urgency=medium

  * The separators in the output are now limited by the terminal width.
  * Added HTTP Status Code validation.
  * Added port validation.
  * Made the list of config options more fancy.
  * Added --debug option.
  * You can now quit by pressing "q".
  * Updated to Java 25.

 -- Til7701 <tilman@holube.de>  Wed, 06 Aug 2025 18:04:55 +0200


request-sink (0.0.3) unstable; urgency=medium

  * The debian package now conforms to standard Debian packaging practices.
  * Added man pages.
  * Added tab completion for bash.
  * Added config subcommand to manage default values for port and status code.

 -- Til7701 <tilman@holube.de>  Wed, 06 Aug 2025 16:30:00 +0200


request-sink (0.0.2) unstable; urgency=medium

  * Added option to set status code returned to all requests.
  * Separators in the output now have the same size.
  * Metadata and headers are now formatted uniformly.

 -- Til7701 <tilman@holube.de>  Sat, 05 Jul 2025 13:14:00 +0200


request-sink (0.0.1) unstable; urgency=medium

  * This is the first release.

 -- Til7701 <tilman@holube.de>  Wed, 02 Jul 2025 18:25:00 +0200